--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = { extras = ["jinja2"], version = "^0.109.0" }
+fastapi = "^0.110.1"
 piccolo = { extras = ["sqlite"], version = "^1.3.0" }
 passlib = "^1.7.4"
 bcrypt = "^4.1.2"
@@ -22,6 +22,7 @@ fastapi-cors = "^0.0.6"
 python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
 piccolo-admin = "^1.2.0"
+moralis = {git = "https://github.com/rosenbergm/Moralis-Python-SDK.git", rev = "main"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
