--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
 piccolo-admin = "^1.2.0"
 moralis = {git = "https://github.com/rosenbergm/Moralis-Python-SDK.git", rev = "main"}
+redis = "^5.0.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
